# pydantic-logger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.github/workflows/: generate-stubs.yml
pydantic_logger/: __init__.py  __init__.pyi  _logging_config.py  _logging_config.pyi  _logging_level.py  _pydantic_logger.py  _pydantic_logger.pyi
tests/: test_import.py  test_logging_config.py  test_logging_level.py  test_pydantic_logger.py
