[project]
name = "pydantic_logger"
version = "0.1.7"
description = "Contains pydantic-compatible logger"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_logger"]

[dependency-groups]
stubs = [
    "mypy>=1.19.1",
]
