[project]
name = "pydantic_logger"
version = "0.1.15"
description = "Contains pydantic-compatible logger"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-frozendict",
]


[tool.coverage.run]
branch = true
source = ["pydantic_logger"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_logger"]

[tool.uv.sources]
pydantic-frozendict = { git = "https://github.com/Tesla2000/pydantic-frozendict" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]
