[project]
name = "pydantic_logger"
version = "0.1.19"
description = "Contains pydantic-compatible logger"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-frozendict>=0.1.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Tesla2000/pydantic-logger"
Issues = "https://github.com/Tesla2000/pydantic-logger/issues"
Coverage = "https://codecov.io/gh/Tesla2000/pydantic-logger"


[tool.coverage.run]
branch = true
source = ["pydantic_logger"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_logger"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]
